# diskquota

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  diskquota--1.0--2.0.sql  diskquota--1.0.sql  diskquota--2.0--1.0.sql  diskquota--2.0.sql  diskquota--2.1.sql  diskquota--2.2--2.1.sql  diskquota.c  diskquota.control  diskquota.h  diskquota_enum.h  diskquota_schedule  diskquota_test--1.0.sql  diskquota_test.control  diskquota_utility.c  enforcement.c  gp_activetable.c  gp_activetable.h  monitored_db.c  quotamodel.c  relation_cache.c  relation_cache.h  test_util.sql
.github/workflows/: check.yml  test.yml
.github/workflows/scripts/: setup.sh
cmake/: BuildInfo.cmake  Distro.cmake  Git.cmake  Gpdb.cmake  Regress.cmake  regress_loop.sh  show_regress_diff.sh
concourse/: PROJ_NAME  README.md  fly.sh
concourse/lib/: fly.sh
concourse/pipeline/: README.md  base.lib.yml  commit.yml  dev.yml  job_def.lib.yml  pipeline.yml  pr.yml  release.yml  release_pipeline.yml  res_def.yml  trigger_def.lib.yml
concourse/scripts/: build_diskquota.sh  check-clang-format.sh  entry.sh  test_diskquota.sh  upgrade_extension.sh
concourse/tasks/: build_diskquota.yml  test_diskquota.yml  upgrade_extension.yml
control/ddl/: diskquota--1.0--2.0.sql  diskquota--2.0--2.1.sql  diskquota--2.0.sql  diskquota--2.1--2.0.sql  diskquota--2.1--2.2.sql  diskquota--2.1.sql  diskquota--2.2.sql  diskquota.control
expected/: test_primary_failure.out  test_update_db_cache.out
sql/: test_primary_failure.sql  test_update_db_cache.sql
src/: diskquota.c  diskquota.h  gp_activetable.c  monitored_db.c  quotamodel.c  relation_cache.c  relation_cache.h
tests/: CMakeLists.txt  init_file
tests/data/: current_binary_name  find_latest_log.sh
tests/isolation2/: isolation2_schedule  isolation2_schedule7
tests/isolation2/expected/: config.out  reset_config.out  test_blackmap.out  test_ereport_from_seg.out  test_fast_quota_view.out  test_per_segment_config.out  test_postmaster_restart.out  test_rejectmap.out  test_relation_cache.out  test_truncate.out  test_vacuum.out
tests/isolation2/expected7/: test_per_segment_config.out  test_postmaster_restart.out  test_rejectmap.out
tests/isolation2/sql/: config.sql  reset_config.sql  test_blackmap.sql  test_ereport_from_seg.sql  test_fast_quota_view.sql  test_per_segment_config.sql  test_postmaster_restart.in.sql  test_postmaster_restart.sql  test_rejectmap.in.sql  test_rejectmap.sql  test_relation_cache.sql  test_truncate.sql  test_vacuum.sql
tests/regress/: diskquota_schedule  diskquota_schedule7  regress_init_file
tests/regress/expected/: config.out  reset_config.out  test_activetable_limit.out  test_appendonly.out  test_blackmap.out  test_clean_blackmap_after_drop.out  test_clean_rejectmap_after_drop.out  test_column.out  test_copy.out  test_ctas_no_preload_lib.out  test_ctas_pause.out  test_ctas_role.out  test_ctas_tablespace_role.out  test_dbname_encoding.out  test_default_tablespace.out  test_delete_quota.out  test_drop_after_pause.out  test_drop_table.out  test_extension.out  test_insert_after_drop.out  test_mistake.out  test_partition.out  test_pause_and_resume.out  test_pause_and_resume_multiple_db.out  test_primary_failure.out  test_query_string.out  test_quota_view_no_table.out  test_readiness_logged.out  test_rejectmap.out  test_rejectmap_mul_db.out  test_relation_cache.out  test_relkind.out  test_rename.out  test_reschema.out  test_role.out  test_schema.out  test_show_status.out  test_table_size.out  test_tablespace_diff_schema.out  test_tablespace_role.out  (+13 more)
tests/regress/expected7/: config.out  reset_config.out  test_activetable_limit.out  test_appendonly.out  test_clean_rejectmap_after_drop.out  test_column.out  test_copy.out  test_ctas_before_set_quota.out  test_ctas_no_preload_lib.out  test_ctas_pause.out  test_ctas_role.out  test_ctas_schema.out  test_ctas_tablespace_role.out  test_ctas_tablespace_schema.out  test_default_tablespace.out  test_delete_quota.out  test_drop_after_pause.out  test_drop_table.out  test_extension.out  test_fast_disk_check.out  test_fetch_table_stat.out  test_index.out  test_init_table_size_table.out  test_many_active_tables.out  test_partition.out  test_pause_and_resume.out  test_pause_and_resume_multiple_db.out  test_primary_failure.out  test_rejectmap.out  test_rejectmap_mul_db.out  test_relation_cache.out  test_rename.out  (+16 more)
tests/stress/: README.md  __main__.py  __utils__.py  fetch_table_stat.py  init_table_size.py  monitor_db.py  update_quota_usage.py
upgrade_test/: CMakeLists.txt  Makefile  README.md  alter_test.sh  diskquota_schedule_downgrade  diskquota_schedule_upgrade  init_file  schedule_1.0--2.0  schedule_2.0--1.0  schedule_2.0--2.1  schedule_2.1--2.0  schedule_2.1--2.2  schedule_2.2--2.1  schedule_misc
upgrade_test/expected/: 1.0_catalog.out  1.0_cleanup_quota.out  1.0_install.out  1.0_migrate_to_version_1.0.out  1.0_set_quota.out  1.0_test_in_2.0_quota_create_in_1.0.out  2.0_catalog.out  2.0_install.out  2.0_migrate_to_version_2.0.out  2.0_set_quota.out  2.0_test_in_1.0_quota_create_in_2.0.out  2.0_test_in_2.1_quota_create_in_2.0.out  2.1_catalog.out  2.1_install.out  2.1_migrate_to_version_2.1.out  2.1_set_quota.out  2.1_test_in_2.0_quota_create_in_2.1.out  2.2_catalog.out  2.2_install.out  2.2_migrate_to_version_2.2.out  2.2_set_quota.out  downgrade_extension_to_1X.out  init.out
upgrade_test/sql/: 1.0_catalog.sql  1.0_install.sql  1.0_migrate_to_version_1.0.sql  1.0_migrate_to_version_1x.sql  1.0_not_work_using_2.x_binary.sql  1.0_set_quota.sql  1.0_test_in_2.0_quota_create_in_1.0.sql  1.0_test_quota_in_2x.sql  2.0_install.sql  2.0_migrate_to_version_2.0.sql  2.0_migrate_to_version_2x.sql  2.0_not_work_using_1.x_binary.sql  2.0_set_quota.sql  2.0_test_in_1.0_quota_create_in_2.0.sql  2.0_test_quota_in_1x.sql  2.1_install.sql  2.1_migrate_to_version_2.1.sql  2.1_set_quota.sql  2.1_test_in_2.2_quota_create_in_2.1.sql  2.2_catalog.sql  2.2_install.sql  2.2_migrate_to_version_2.2.sql  2.2_set_quota.sql  2.2_test_in_2.1_quota_create_in_2.2.sql  init.sql  upgrade_extension_to_2X.sql
(+40 files in other folders)
